fix: 💄 overflow fix

--- a/src/components/Contact/contact.scss
+++ b/src/components/Contact/contact.scss
@@ -2,7 +2,6 @@
 
 #contact {
   position: relative;
-  overflow: hidden;
 
   .background p{
     position: absolute;
